--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,140 @@
 @import "./reset";
 @import "./variable";
+
+.clearfix:after {
+  content: "";
+  clear: both;
+  display: block;
+}
+
+.wrapper {
+  width: 100vw;
+  height: 100vw;
+  .sidebar {
+    width: 300px;
+    height: 100vh;
+    float: left;
+    .header {
+      height: 15%;
+      width: 100%;
+      background-color: #253141;
+      position: relative;
+      &__name {
+        font-size: 16px;
+        color: #FFFFFF;
+        font-weight: bold;
+        padding: 35px 0 0 20px;
+      }
+    }
+    .groups {
+      background-color: #2f3e51;
+      height: 85%;
+      color: #FFFFFF;
+      padding: 0 0 0 20px;
+      .group {
+        font-size: 15px;
+        padding: 20px 0 0 0;
+      }
+      &__message {
+        font-size: 11px;
+        padding: 5px 0 20px 0;
+      }
+    }
+  }
+
+  .chat {
+    width: calc(100vw - 300px);
+    height: 100vh;
+    float: left;
+    .header {
+      border-bottom: solid 1px #eeeeee;
+      height: 15%;
+      .left-header{
+        float: left;
+        &__name {
+          font-size: 20px;
+          color: #333333;
+          padding: 35px 0 15px 40px;
+        }
+        &__members {
+          font-size: 12px;
+          color: #999999;
+          padding: 0 40px;
+          .member {
+            float: right;
+            padding: 0 0 0 10px;
+          }
+
+        }
+      }
+      .right-header {
+        height: 40px;
+        border-style: solid 1px #38AEF0;
+        margin: 28px 40px 0 0;
+        padding:  0 20px;
+        line-height: 40px;
+        float: right;
+        &__button {
+          color: #38AEF0;
+          text-decoration: none;
+        }
+      }
+    }
+
+    .messages {
+      height: calc(100vh - 15% - 90px);
+      background-color: #aaaaaa;
+      overflow: scroll;
+      .message {
+        padding: 6px 0 0 40px;
+        .upper-message {
+          padding: 40px 0 0 0;
+          &__name {
+            font-size: 16px;
+            font-weight: bold;
+            color: #434A54;
+            float: left;
+          }
+          &__date {
+            padding: 0 0 0 10px;
+            font-size: 12px;
+            color: #999999;
+            float: left;
+          }
+        }
+        .lower-message {
+          padding: 10px 0 0 0;
+          float: left;
+          &__content {
+            font-size: 14px;
+            color: #434A54;
+          }
+        }
+      }
+    }
+
+    .form {
+      height: 90px;
+      background-color: #999999;
+      .new-message {
+        padding: 20px 0 20px 40px;
+        .form__message {
+          height: 50px;
+          width: calc(100vw - 520px);
+          padding-left: 10px;
+          font-size: 16px;
+          color: #434A54;
+        }
+        .form__submit {
+          width: 100px;
+          height: 50px;
+          text-align: center;
+          background-color: #38AEF0;
+          color: #FFFFFF;
+          border-color: #38AEF0;
+          padding: 15px;
+        }
+      }
+    }
+  }
+}
