--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -35,6 +35,7 @@
     .form.clearfix
       %form.new-message
         %input.form__message{type: "text_field", placeholder: "Type a message"}
-          %input.form__image{type: "file"}
-            %i{ class: "fa fa-file-image-o"}
+        %label.form__image
+          %input{type: "file", style: "display:none"}
+          %i{ class: "fa fa-file-image-o"}
         %input.form__submit{type: "submit", value: "Send"}
