--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,7 @@
 
 
 .fa {
-  color: white;
+  color: $white;
 }
 
 .wrapper {
@@ -15,8 +15,8 @@
   .flash {
     width: 100vw;
     height: 30px;
-    background-color: #38AEF0;
-    color: #FFFFFF;
+    background-color: $blue;
+    color: $white;
     text-align: center;
   }
   .sidebar {
@@ -26,10 +26,10 @@
     .header {
       height: 15%;
       width: 100%;
-      background-color: #253141;
+      background-color: $navy-blue;
       .header__name {
         font-size: 16px;
-        color: #FFFFFF;
+        color: $white;
         font-weight: bold;
         padding: 35px 0 0 20px;
         float: left;
@@ -46,9 +46,9 @@
       }
     }
     .groups {
-      background-color: #2f3e51;
+      background-color: $dark-blue;
       height: 85%;
-      color: #FFFFFF;
+      color: $white;
       padding: 0 0 0 20px;
       .group {
         font-size: 15px;
@@ -77,7 +77,7 @@
         }
         &__members {
           font-size: 12px;
-          color: #999999;
+          color: $thin-gray;
           padding: 0 40px;
           .member {
             float: right;
@@ -87,13 +87,13 @@
       }
       .right-header {
         height: 40px;
-        border: solid 1px #38AEF0;
+        border: solid 1px $blue;
         margin: 28px 40px 0;
         padding:  0 20px;
         line-height: 40px;
         float: right;
         &__button {
-          color: #38AEF0;
+          color: $blue;
           text-decoration: none;
         }
       }
@@ -101,7 +101,7 @@
 
     .messages {
       height: calc(100vh - 15% - 90px);
-      background-color: #aaaaaa;
+      background-color: $dark-gray;
       overflow: scroll;
       .message {
         padding: 6px 0 0 40px;
@@ -112,13 +112,13 @@
           &__name {
             font-size: 16px;
             font-weight: bold;
-            color: #434A54;
+            color: $deep-blue;
             float: left;
           }
           &__date {
             padding: 0 0 0 10px;
             font-size: 12px;
-            color: #999999;
+            color: $thin-gray;
             float: left;
           }
         }
@@ -127,7 +127,7 @@
           float: left;
           &__content {
             font-size: 14px;
-            color: #434A54;
+            color: $deep-blue;
           }
         }
       }
@@ -135,7 +135,7 @@
 
     .form {
       height: 90px;
-      background-color: #999999;
+      background-color: $thin-gray;
       .new-message {
         padding: 20px 0 20px 40px;
         .form__message {
@@ -144,7 +144,7 @@
           padding-left: 10px;
           padding-right: 10px;
           font-size: 16px;
-          color: #434A54;
+          color: $deep-blue;
         }
         .form__image {
           height: 50px;
@@ -160,9 +160,9 @@
         .form__submit {
           width: 100px;
           height: 50px;
-          background-color: #38AEF0;
-          color: #FFFFFF;
-          border-color: #38AEF0;
+          background-color: $blue;
+          color: $white;
+          border-color: $blue;
           text-align: center;
           float: right;
           margin-right: 40px;
