--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -5,9 +5,9 @@
       .header__name
         %h3 seo
       = link_to do
-        %i{ class: "fa fa-pencil-square-o"}
+        =fa_icon "pencil-square-o"
       = link_to do
-        %i{ class: "fa fa-cog"}
+        =fa_icon "cog"
 
 
     .groups
