--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -39,5 +39,5 @@
         %input.new-message__text{type: "text_field", placeholder: "Type a message"}
         %label.new-message__image
           %input{type: "file", style: "display:none"}
-          %i{ class: "fa fa-file-image-o"}
+          =fa_icon "file-image-o"
         %input.new-message__submit{type: "submit", value: "Send"}
