--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -3,10 +3,11 @@
   .sidebar
     .header
       .header__name
-        %h3 seo
+        %h3
+          = current_user.name
       = link_to do
         =fa_icon "pencil-square-o"
-      = link_to do
+      = link_to edit_user_path do
         =fa_icon "cog"
 
     .groups
