--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,7 @@
 @import "./user";
+@import "./flash";
 @import "./reset";
 @import "./variable";
 @import "font-awesome";
 @import "./mixin";
-@import "./messages"
+@import "./messages";
