--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -46,16 +46,18 @@
       .group {
         font-size: 15px;
         padding: 20px 0 0 0;
+        color: $white;
       }
       &__message {
         font-size: 11px;
         padding: 5px 0 20px 0;
+        color: $white;
       }
     }
   }
 
   .chat {
-    width: calc(100vw - 300px);
+    width: calc(100% - 300px);
     height: 100vh;
     float: left;
     .header {
