--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -1,11 +1,17 @@
 .sidebar
   .header
     .header__name
-      %h3 = current_user.name
+      %h3
+        = current_user.name
     = link_to new_group_path do
       =fa_icon "pencil-square-o"
     = link_to edit_user_path(current_user) do
       =fa_icon "cog"
 
   .groups
-    =render partial: "messages/group"
+    - current_user.groups.each do |group|
+      =link_to group_messages_path(group) do
+        .group
+          = group.name
+        .groups__message
+          = group.show_latest_message
