--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,9 +1,11 @@
 .message
   .upper-message.clearfix
     .upper-message__name
-      seo
+      = message.user.name
     .upper-message__date
-      2017/12/30 11:22:11
+      = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
   .lower-message
-    .lower-message__content
-      Hello,World
+    - if message.content.present?
+      %p.lower-message__content
+        = message.content
+    = image_tag message.image.url, class: "lower-message__image" if message.image.present?
