--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -96,7 +96,7 @@
 
     .messages {
       height: calc(100vh - 15% - 90px);
-      background-color: $dark-gray;
+      background-color: $linen;
       overflow: scroll;
       .message {
         padding: 6px 0 0 40px;
@@ -124,6 +124,10 @@
             font-size: 14px;
             color: $deep-blue;
           }
+          &__image {
+            width: 800px;
+            height: 800px;
+          }
         }
       }
     }
@@ -144,10 +148,9 @@
         &__image {
           height: 50px;
           width: 50px;
-          margin: 32px 130px 20px 0;
           position: absolute;
           top: calc(100vh - 57px);
-          right: 0;
+          right: 130px;
           .fa-file-image-o {
             color: black;
           }
