--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -21,6 +21,6 @@
         = f.text_field :content, class: "new-message__text", placeholder: "Type a message"
         .new-message__image
           = f.label :image, class: "new-message__image2" do
-            = f.file_field :image, style: "display:none"
+            = f.file_field :image, class: "new-message__image__field",style: "display:none"
             = fa_icon "file-image-o"
         = f.submit "Send", class: "new-message__submit"
